begin status bar and progress bar for pdfpreviews

--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -82,7 +82,7 @@
              <x>0</x>
              <y>0</y>
              <width>1179</width>
-             <height>420</height>
+             <height>370</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout"/>
@@ -152,6 +152,20 @@
         </item>
        </layout>
       </widget>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="lblSearchResults">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QProgressBar" name="pdfProcessBar">
+      <property name="value">
+       <number>24</number>
+      </property>
      </widget>
     </item>
    </layout>
