--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -101,7 +101,7 @@
           <item>
            <widget class="QComboBox" name="comboScale">
             <property name="currentText">
-             <string>75%</string>
+             <string>25%</string>
             </property>
             <item>
              <property name="text">
@@ -157,7 +157,7 @@
     <item>
      <widget class="QLabel" name="lblSearchResults">
       <property name="text">
-       <string>TextLabel</string>
+       <string/>
       </property>
      </widget>
     </item>
